--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -54,13 +54,14 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="System\Reflection\DynVal.cs" />
     <Compile Include="System\Functional.cs" />
     <Compile Include="System\IO\FileChunks.cs" />
-    <Compile Include="System\Let.cs" />
-    <Compile Include="System\Security\Cryptography\AesExtentions.cs" />
     <Compile Include="System\Security\Cryptography\CryptoProvider.cs" />
     <Compile Include="System\Security\Cryptography\ISalter.cs" />
     <Compile Include="System\Security\Cryptography\Password.cs" />
+    <Compile Include="System\Security\Cryptography\QuickAes.cs" />
+    <Compile Include="System\Security\Cryptography\RoundRobinRNG.cs" />
     <Compile Include="Utilities\Utilities.cs" />
     <Compile Include="Utilities\ConsoleExtensions.cs" />
     <Compile Include="Utilities\IntExtensions.cs" />
